--- a/index.html
+++ b/index.html
@@ -2,10 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Site layout</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-hackaton-2 index page
-
+<body class="site-content">
+<header class="header">
+    <a href="gallery-layouts.html">Content Layouts</a>
+</header>
+<main class="main">
+    <div class="content grid-content">
+        <h1 class="headline">CSS Grid</h1>
+        <p class="tagline-1">A powerful tool for two dimensional layout creation</p>
+        <p class="tagline-2">No need to use additional framework</p>
+        <p class="tagline-3">just play with it and you'd love it!</p>
+        <span class="a"></span>
+        <span class="b"></span>
+        <span class="c"></span>
+        <span class="e"></span>
+        <span class="f"></span>
+        <span class="g"></span>
+    </div>
+</main>
+<aside class="sidebar">
+    Sidebar
+</aside>
+<footer class="footer">
+    Footer
+</footer>
 </body>
 </html>
